modifica stesura preventivo

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -316,8 +316,13 @@ Per eseguire una più accurata pianificazione progettuale, il \gloss{team} ha de
 \end{description}
 In ognuna di queste fasi, vengono svolte attività di sviluppo del progetto che sono descritte più approfonditamente nel documento corrente.
 Inoltre, per illustrare la suddivisione delle seguenti fasi, sono riportati i \gloss{diagrammi di Gantt} di ognuna: ogni diagramma presenta delle \gloss{milestone} stabilite e le varie suddivisioni dei periodi in sotto-attività.
-\newpage
-{\includegraphics[width=15cm]{img/ganttweeks.jpg}\par}
+
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/ganttweeks.jpg}}
+  \caption{Diagramma di Gantt, Percorso Totale}
+\label{fig:Percorso Totale}
+\end{figure}
 
 \subsection{Suddivisione delle Attività}
 	\subsubsection{\AR} \label{sec:AR}
@@ -334,14 +339,24 @@ Inoltre, per illustrare la suddivisione delle seguenti fasi, sono riportati i \g
 		\item[Lettera di presentazione] questo documento viene presentato al committente al fine di mostrare l'interesse del gruppo di partecipare alla gara d'appalto.
 	\end{description}
 	
-{\includegraphics[width=16cm]{img/ganttan.jpg}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/ganttan.jpg}}
+  \caption{Diagramma di Gantt, Analisi dei Requisiti}
+\label{fig:Analisi dei Requisiti}
+\end{figure}
 		
 
 	\subsubsection{\ARI} \label{sec:ARI}
 	\textbf{Periodo}: dal 24-01-2017 al 03-02-2017.
 	\\ Questo periodo inizia in concomitanza con la \emph{Revisione dei Requisiti} e termina con una \gloss{milestone} interna che corrisponde all'inizio della \PA. In questo periodo, il gruppo mira ad integrare la documentazione precedentemente prodotta (in modo particolare l'\AR), con le correzioni suggerite durante la \emph{Revisione dei Requisiti}.
 
-{\includegraphics[width=15cm]{img/ganttari.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/ganttari.png}}
+  \caption{Diagramma di Gantt, Analisi dei Requisiti Incrementale}
+\label{fig:Analisi dei Requisiti Incrementale}
+\end{figure}
 
 	
 	\subsubsection{\PA} \label{sec:PA}
@@ -352,7 +367,12 @@ Inoltre, per illustrare la suddivisione delle seguenti fasi, sono riportati i \g
 		\item[Specifica Tecnica] in questa attività viene stilato questo documento che descrive le scelte progettuali ad alto livello che il prodotto dovrà rispettare.
 	\end{description}
 
-{\includegraphics[width=15cm]{img/ganttpa.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/ganttpa.png}}
+  \caption{Diagramma di Gantt, Progettazione Architetturale}
+\label{fig:Progettazione Architetturale}
+\end{figure}
 
 	\subsubsection{\PDC} \label{sec:PDC}
 	\textbf{Periodo}: dal 06-03-2017 al 11-04-2017.	
@@ -364,7 +384,12 @@ Inoltre, per illustrare la suddivisione delle seguenti fasi, sono riportati i \g
 		\item[Manuale Utente] in questa attività si crea il documento destinato all'utente finale, che ha lo scopo di fornire le linee guida per il corretto utilizzo del software.
 	\end{description}
 
-{\includegraphics[width=15cm]{img/ganttpdc.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/ganttpdc.png}}
+  \caption{Diagramma di Gantt, Progettazione di Dettaglio e Codifica}
+\label{fig:Progettazione di Dettaglio e Codifica}
+\end{figure}
 
 	\subsubsection{\VV} \label{sec:VV}
 
@@ -375,7 +400,12 @@ Inoltre, per illustrare la suddivisione delle seguenti fasi, sono riportati i \g
 		\item[Incremento e Verifica dei Documenti] in questa attività verranno incrementati verificati tutti i documenti, basandosi sui risultati della \emph{Revisione di Qualifica}.
 	\end{description}	
 	
-{\includegraphics[width=15cm]{img/ganttva.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/ganttva.png}}
+  \caption{Diagramma di Gantt, Verifica e Validazione}
+\label{fig:Verifica e Validazione}
+\end{figure}
 
 	
 \newpage \section{Suddivisione delle ore lavorative}
@@ -430,11 +460,26 @@ Di seguito è riportata la pianificazione di dettaglio delle attività, suddivis
 \end{center} 
 % i colori danno problemi di visualizzazione alle linee
 
-	{\includegraphics[width=15cm]{img/orear1.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orear1.png}}
+  \caption{Ore Ruolo per Persona}
+\label{fig:ORP}
+\end{figure}
 
-	{\includegraphics[width=15cm]{img/orear2.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orear2.png}}
+  \caption{Ore Persona per Ruolo}
+\label{fig:OPR}
+\end{figure}
 
-	{\includegraphics[width=15cm]{img/costoar.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/costoar.png}}
+  \caption{Costo Persona Analisi dei Requisiti}
+\label{fig:CPAR}
+\end{figure}
 
 %\x
 %{\roww{7}{3}{14}{0}{0}{7}{31}}
@@ -471,11 +516,26 @@ Di seguito è riportata la pianificazione di dettaglio delle attività, suddivis
 \end{center} 
 % i colori danno problemi di visualizzazione alle linee
 
-	{\includegraphics[width=15cm]{img/oreari1.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/oreari1.png}}
+  \caption{Ore Ruolo per Persona}
+\label{fig:ORP}
+\end{figure}
 
-	{\includegraphics[width=15cm]{img/oreari2.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/oreari2.png}}
+  \caption{Ore Persona per Ruolo}
+\label{fig:OPR}
+\end{figure}
 
-	{\includegraphics[width=15cm]{img/costoari.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/costoari.png}}
+  \caption{Costo Persona Analisi dei Requisiti Incrementale}
+\label{fig:CPARI}
+\end{figure}
 
 
 \subsection{\PA}
@@ -503,11 +563,26 @@ Di seguito è riportata la pianificazione di dettaglio delle attività, suddivis
 \end{center} 
 % i colori danno problemi di visualizzazione alle linee
 
-	{\includegraphics[width=15cm]{img/orepa1.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orepa1.png}}
+  \caption{Ore Ruolo per Persona}
+\label{fig:ORP}
+\end{figure}
 
-	{\includegraphics[width=15cm]{img/orepa2.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orepa2.png}}
+  \caption{Ore Persona per Ruolo}
+\label{fig:OPR}
+\end{figure}
 
-	{\includegraphics[width=15cm]{img/costopa.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/costopa.png}}
+  \caption{Costo Persona Progettazione Architetturale}
+\label{fig:CPPA}
+\end{figure}
 
 
 \subsection{\PDC}
@@ -535,19 +610,26 @@ Di seguito è riportata la pianificazione di dettaglio delle attività, suddivis
 \end{center} 
 % i colori danno problemi di visualizzazione alle linee
 
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orepdc1.png}}
+  \caption{Ore Ruolo per Persona}
+\label{fig:ORP}
+\end{figure}
 
-% USARE QUESTO PER IMMAGINI
-%\begin{figure}
- % \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orepdc1.png}}
- % \caption{Caption}
-%  \label{fig:key}
-%\end{figure}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orepdc2.png}}
+  \caption{Ore Persona per Ruolo}
+\label{fig:OPR}
+\end{figure}
 
-	{\includegraphics[width=15cm]{img/orepdc1.png}\par}
-
-	{\includegraphics[width=15cm]{img/orepdc2.png}\par}
-
-	{\includegraphics[width=15cm]{img/costopdc.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/costopdc.png}}
+  \caption{Costo Persona Progettazione di Dettaglio e Codifica}
+\label{fig:CPPDC}
+\end{figure}
 
 
 \subsection{\VV}
@@ -575,19 +657,45 @@ Di seguito è riportata la pianificazione di dettaglio delle attività, suddivis
 \end{center} 
 % i colori danno problemi di visualizzazione alle linee
 
-	{\includegraphics[width=15cm]{img/orevv1.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orevv1.png}}
+  \caption{Ore Ruolo per Persona}
+\label{fig:ORP}
+\end{figure}
 
-	{\includegraphics[width=15cm]{img/orevv2.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orevv2.png}}
+  \caption{Ore Persona per Ruolo}
+\label{fig:OPR}
+\end{figure}
 
-	{\includegraphics[width=15cm]{img/costovv.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/costovv.png}}
+  \caption{Costo Persona Verifica e Validazione}
+\label{fig:CPVV}
+\end{figure}
 
 
 \newpage \section{Preventivo} \label{sec:preventivo}
 	\subsection{Prospetto Orario}
 I dati rappresentati dai seguenti grafi, mostrano i ruoli e il tempo che ogni compononte ricopre nelle varie fasi del progetto.
 
-{\includegraphics[width=15cm]{img/oretotali1.png}\par}
-{\includegraphics[width=15cm]{img/oretotali3.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/oretotali1.png}}
+  \caption{Ore Ruolo per Persona}
+\label{fig:ORP}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/oretotali3.png}}
+  \caption{Ore Persona per Ruolo}
+\label{fig:OPR}
+\end{figure}
 
 	\subsection{Prospetto Economico}
 Il costo totale del progetto è di 11990 \euro. La tabella e il grafo seguente, riportano le ore totali rendicontate di ciascun membro del gruppo.
@@ -614,7 +722,12 @@ Il costo totale del progetto è di 11990 \euro. La tabella e il grafo seguente, 
   \end{tabular}
 \end{center} 
 
-{\includegraphics[width=15cm]{img/orerendruolo.png}\par}
+\begin{figure}[H]
+  \centering
+   \makebox[\textwidth][c]{\includegraphics[width=1.5\textwidth]{img/orerendruolo.png}}
+  \caption{Ore Ruolo Rendicontate}
+\label{fig:ORR}
+\end{figure}
 
 \section{Consuntivo di periodo} \label{sec:consuntivo}
 
