Modificato scopo del prodotto e glossario

--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -6,8 +6,24 @@
 \newcommand{\hx}{Hivex}
 \newcommand{\repo}{\url{https://github.com/hivex-unipd/swedesigner}}
 \newcommand{\email}{\href{mailto:hivex.team@gmail.com}{hivex.team@gmail.com}}
-\newcommand{\scopo}{Scopo del progetto \proj{} proposto dall'azienda \ZU{} è la realizzazione di un'applicazione web che permetta di progettare applicazioni che implementino giochi da tavolo, utilizzando le notazione grafiche dell'UML. La nostra applicazione si occupa di generare e fornire all'utente il codice corrispondente alla progettazione del gioco da tavolo pensato dall'utente.} % da modificare
-\newcommand{\presgloss}{Al fine di precisare il significato di termini ambigui e di chiarire quelli troppo specifici, alleghiamo il documento \Glossario.}
+\newcommand{\scopo}{Lo scopo del prodotto è quello di implementare un \gloss{editor UML} che consenta, a partire dai diagrammi realizzati dall'utente, 
+	di generare il codice dell'applicazione da essi descritta, appartenente ad uno specifico dominio applicativo: i giochi da tavolo.
+	\\Il sistema offrirà le seguenti funzionalità:
+	\begin{itemize}
+		\item fornire all'utente la possibilità di realizzare l'architettura di classi e il codice dei metodi dell'applicativo desiderato tramite 
+			due tipologie diagrammi ispirate ai diagrammi delle classi e delle attività \gloss{UML}, ma opportunamente modificate per guidare la progettazione 
+			e la stesura del codice garantendone completezza, coesione e una buona qualità di strutturazione;
+		\item generare un applicativo eseguibile scritto in codice \gloss{Java} a partire dai diagrammi realizzati dall'utente, a patto che essi siano 
+			completi e corretti;
+		\item aiutare l'utente nella realizzazione della sua applicazione fornendo stereotipi e strumenti di supporto aggiuntivi coerenti con il 
+			dominio applicativo di riferimento.
+	\end{itemize}		
+	L'editor dovrà infine essere fruibile dall'utente attraverso un \gloss{browser} desktop idoneo all'utilizzo delle tecnologie 
+	\gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}.}
+\newcommand{\presgloss}{Per rendere più semplice e chiara la comprensione e di evitare ogni ambiguità relativa al linguaggio e ai termini utilizzati 
+						nei documenti, viene allegato il \Glossario{} nel quale vengono raccolte le spiegazioni di termini tecnici o ambigui, 
+						di acronimi o abbreviazioni.
+						\\Per rendere più facile la lettura, i termini presenti nel glossario saranno marcati con il pedice $\gamma$.}
 
 % Membri del gruppo:
 \newcommand{\PB}{Paolo Baracco}
