Modificato scopo del prodotto e glossario

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -14,7 +14,6 @@
 \usepackage{hyperref}
 \hypersetup{hidelinks}
 
-
 \begin{document}
 \maketitle
 \include{diario}
@@ -26,12 +25,10 @@
 	Questo documento ha lo scopo di fissare le strategie di verifica e validazione che il gruppo \hx{} ha deciso di adottare per perseguire gli obiettivi di qualità di processo e di prodotto relativi al progetto \proj{}. Il presente documento si propone di descrivere l'approccio del gruppo alle diverse fasi di verifica per poter ottenere il miglior risultato auspicabile in termini di qualità. Per perseguire tali obiettivi e risultati occorre verificare continuamente le attività svolte in modo da individuare e correggere velocemente le anomalie, minimizzando così l'utilizzo di risorse e allo stesso tempo mantenendo la correttezza del prodotto.
 
 	\subsection{Scopo del prodotto}
-	Lo scopo del prodotto è di implementare un editor \gloss{UML} che consenta, a partire dai diagrammi realizzati dall'utente, di generare il codice dell'applicazione da essi descritta, appartenente ad un determinato dominio applicativo: i giochi da tavolo. 
-	Il prodotto permetterà all'utente di realizzare l'applicativo desiderato utilizzando due tipologie di diagrammi ispirati ai diagrammi delle classi e delle attività UML, modificati appositamente per guidarlo nella progettazione dell'applicazione e agevolare la successiva generazione del codice, consentendo così una maggior qualità e strutturazione del codice stesso e di conseguenza un prodotto finito migliore.
-	L'editor dovrà essere fruibile dall'utente attraverso un browser desktop idoneo all'utilizzo delle tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}, e il frutto del generatore di codice sarà scritto in \gloss{Java}.
-
+	\scopo{}
+	
 	\subsection{Glossario}
-	Per rendere più semplice e chiara la comprensione e di evitare ogni ambiguità relativa al linguaggio e ai termini utilizzati nei documenti, viene allegato il \Glossario nel quale vengono raccolte le spiegazioni di termini tecnici o ambigui, di acronimi o abbreviazioni. Per rendere più facile la lettura, i termini presenti nel glossario saranno marcati con il pedice g.
+	\presgloss{}
 	
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
